# Logbless

./: .gitignore  README.md  pyproject.toml
justlogs/: app.py  cli.py  config.py  constants.py
justlogs/static/: log_viewer.css  log_viewer.js
logbless/: app.py  cli.py
logbless/static/: log_viewer.css  log_viewer.html  log_viewer.js
